Using Integer.value is more memory friendly due to integer caching